# Medical_Camera

./: .gitignore  README.md  main.py
.claude/: settings.local.json
medical_camera/: __init__.py  app.py
native/: CMakeLists.txt  README.md
native/build_runtime/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hikvision_sdk_demo.vcxproj  hikvision_sdk_demo.vcxproj.filters  medical_camera_hikvision.vcxproj  medical_camera_hikvision.vcxproj.filters  medical_camera_hikvision_capi.vcxproj  medical_camera_hikvision_capi.vcxproj.filters  medical_camera_native.sln
native/build_runtime/Release/: medical_camera_hikvision.lib  medical_camera_hikvision_capi.exp  medical_camera_hikvision_capi.lib
native/build_runtime/hikvision_sdk_demo.dir/Release/: hikvision_sdk_demo.exe.recipe
native/build_runtime/hikvision_sdk_demo.dir/Release/hikvisio.58AC8737.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_runtime/medical_camera_hikvision.dir/Release/medical_.4C6418CA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  medical_camera_hikvision.lastbuildstate
native/build_runtime/medical_camera_hikvision_capi.dir/Release/: medical_camera_hikvision_capi.dll.recipe
native/build_runtime/medical_camera_hikvision_capi.dir/Release/medical_.5EA6DE01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_runtime/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
native/build_runtime/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_runtime/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
native/examples/: hikvision_sdk_demo.cpp
native/include/medical_camera/hikvision/: hikvision_c_api.h  hikvision_camera.h
native/src/: hikvision_c_api.cpp  hikvision_camera.cpp
scripts/: hikvision_bridge_smoke_test.py
(+14 files in other folders)
